--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
     "@angular/compiler": "^16.1.6",
     "@angular/core": "^16.1.6",
     "@angular/forms": "^16.1.6",
+    "@angular/google-maps": "^16.1.5",
     "@angular/platform-browser": "^16.1.6",
     "@angular/platform-browser-dynamic": "^16.1.6",
     "@angular/router": "^16.1.6",
+    "@asymmetrik/ngx-leaflet": "^16.0.1",
     "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
+    "font-awesome": "^4.7.0",
+    "leaflet": "^1.9.4",
+    "leaflet-control-geocoder": "^2.4.0",
     "ngx-bootstrap": "^11.0.2",
     "rxjs": "~7.8.1",
     "tslib": "^2.3.0",
@@ -29,6 +35,7 @@
     "@angular/cli": "^16.1.5",
     "@angular/compiler-cli": "^16.1.6",
     "@types/jasmine": "~3.10.0",
+    "@types/leaflet": "^1.9.3",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
